--- a/app/src/main/res/layout/activity_todo.xml
+++ b/app/src/main/res/layout/activity_todo.xml
@@ -5,33 +5,40 @@
                                                      android:layout_height="match_parent"
                                                      android:background="@color/viewBackground">
 
-    <include layout="@layout/toolbar" />
+    <include layout="@layout/toolbar"/>
+    <!--<include layout="@layout/container"></include>-->
 
-    <include layout="@layout/container" />
+    <fall.out.wanandroid.widget.NoSwipeViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+    </fall.out.wanandroid.widget.NoSwipeViewPager>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        style="@style/Widget.Design.BottomNavigationView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="bottom"
-        android:background="@color/viewBackground"
-        app:elevation="@dimen/dp_16"
-        app:itemIconTint="@drawable/nav_item_color_state"
-        app:itemTextColor="@drawable/nav_item_color_state"
-        app:layout_behavior=".widget.behavior.BottomNavigationBehavior"
-        app:menu="@menu/bottom_navigation_todo" />
+            android:id="@+id/bottom_navigation"
+            style="@style/Widget.Design.BottomNavigationView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom"
+            android:background="@color/viewBackground"
+            app:elevation="@dimen/dp_16"
+            app:itemIconTint="@drawable/nav_item_color_state"
+            app:itemTextColor="@drawable/nav_item_color_state"
+            app:layout_behavior=".widget.behavior.BottomNavigationBehavior"
+            app:menu="@menu/bottom_navigation_todo"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floating_action_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="@dimen/dp_20"
-        android:layout_marginRight="@dimen/dp_20"
-        android:layout_marginBottom="@dimen/dp_60"
-        app:layout_behavior=".widget.behavior.ScaleDownShowBehavior"
-        app:srcCompat="@drawable/ic_add_24dp" />
+            android:id="@+id/floating_action_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginEnd="@dimen/dp_20"
+            android:layout_marginRight="@dimen/dp_20"
+            android:layout_marginBottom="@dimen/dp_60"
+            app:layout_behavior=".widget.behavior.ScaleDownShowBehavior"
+            app:srcCompat="@drawable/ic_add_24dp"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
