--- a/app/src/main/res/layout/item_project_list.xml
+++ b/app/src/main/res/layout/item_project_list.xml
@@ -22,7 +22,9 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:contentDescription="@null"
-            app:srcCompat="@mipmap/ic_launcher" />
+            android:scaleType="fitXY"
+            android:background="@color/grey_search"
+           />
 
         <RelativeLayout
             android:layout_width="0dp"
