--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,10 +51,10 @@
         <item name="textAllCaps">false</item>
     </style>
 
-    <!--<style name="WindowAnimationFadeInOut">-->
-        <!--<item name="android:windowEnterAnimation">@anim/fade_in</item>-->
-        <!--<item name="android:windowExitAnimation">@anim/fade_out</item>-->
-    <!--</style>-->
+    <style name="WindowAnimationFadeInOut">
+        <item name="android:windowEnterAnimation">@anim/fade_in</item>
+        <item name="android:windowExitAnimation">@anim/fade_out</item>
+    </style>
 
     <style name="ToolbarStyle" parent="AppTheme">
         <item name="android:textColorSecondary">@android:color/white</item>
