--- a/oapp/src/main/res/drawable/item_flow_selector.xml
+++ b/oapp/src/main/res/drawable/item_flow_selector.xml
@@ -5,6 +5,6 @@
 
     <item android:drawable="@color/item_flow_layout_bg" android:state_focused="true" />
 
-    <item android:drawable="@android:color/transparent" />
+    <item android:drawable="@color/item_flow_layout_bg" />
 
 </selector>
