--- a/oapp/src/main/res/layout/item_home_list.xml
+++ b/oapp/src/main/res/layout/item_home_list.xml
@@ -98,7 +98,9 @@
             android:layout_marginLeft="@dimen/dp_10"
             android:layout_marginTop="@dimen/dp_8"
             android:scaleType="centerCrop"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:src="@mipmap/ic_launcher"/>
 
         <TextView
             android:id="@+id/tv_article_title"
@@ -114,7 +116,9 @@
             android:maxLines="2"
             android:paddingBottom="@dimen/dp_6"
             android:textColor="@color/item_title"
-            android:textSize="@dimen/item_tv_title" />
+            android:textSize="@dimen/item_tv_title"
+            tools:text="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAa"
+            tools:visibility="visible"/>
 
         <TextView
             android:id="@+id/tv_article_chapterName"
@@ -149,6 +153,12 @@
 
         </LinearLayout>
 
+
     </RelativeLayout>
+    <View android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/Grey300"
+        android:layout_gravity="bottom"
+        />
 
 </androidx.cardview.widget.CardView>
