--- a/oapp/src/main/res/layout/item_knowledge_tree_list.xml
+++ b/oapp/src/main/res/layout/item_knowledge_tree_list.xml
@@ -53,6 +53,10 @@
             app:srcCompat="@drawable/ic_arrow_right_24dp" />
 
     </RelativeLayout>
-
+    <View android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/Grey300"
+        android:layout_gravity="bottom"
+        />
 
 </androidx.cardview.widget.CardView>
